ansible/roles/!_network/keepalived/deploy/templates/iptables.save
# Generated by iptables-save v1.6.1 on Fri Sep 13 13:58:04 2019
*nat
:PREROUTING ACCEPT [609:46054]
:INPUT ACCEPT [459:36667]
:OUTPUT ACCEPT [1043:70195]
:POSTROUTING ACCEPT [126:10258]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -d 127.0.0.53/32 -o lo -m comment --comment "SNAT for systemd-resolved" -j SNAT --to-source 127.0.0.1
-A POSTROUTING -d 127.0.0.53/32 -o lo -m comment --comment "SNAT for systemd-resolved" -j SNAT --to-source 127.0.0.1

-A POSTROUTING -o ens192 -j MASQUERADE
-A POSTROUTING -o ens162 -j MASQUERADE

-A POSTROUTING -d 127.0.0.53/32 -o lo -m comment --comment "SNAT for systemd-resolved" -j SNAT --to-source 127.0.0.1
-A POSTROUTING -d 127.0.0.53/32 -o lo -m comment --comment "SNAT for systemd-resolved" -j SNAT --to-source 127.0.0.1
-A POSTROUTING -s 172.16.1.7/32 -o ens160 -m comment --comment "Keepalive - NAT for psql://postgres-endpoint:5432" -j SNAT --to-source 172.16.1.100
-A POSTROUTING -s 172.16.1.6/32 -o ens160 -m comment --comment "Keepalive - NAT for psql://postgres-endpoint:5432" -j SNAT --to-source 172.16.1.100
-A POSTROUTING -s 172.16.1.8/32 -o ens160 -m comment --comment "Keepalive - NAT for psql://postgres-endpoint:5432" -j SNAT --to-source 172.16.1.100
-A POSTROUTING -s 172.16.1.0/24 -o ens192 -m comment --comment "Keepalive - NAT for psql://postgres-endpoint:5432" -j SNAT --to-source 172.16.1.100

-A DOCKER -i docker0 -j RETURN
COMMITvirtual_ipaddress'
# Completed on Fri Sep 13 13:58:04 2019
# Generated by iptables-save v1.6.1 on Fri Sep 13 13:58:04 2019
*filter
:INPUT ACCEPT [11159:2110050]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [11534:1145235]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9101 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6479 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9101 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6479 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 172.16.1.3/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9101 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6479 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9101 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6479 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27017 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9101 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6479 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -d 224.0.0.0/8 -i ens160 -p vrrp -j ACCEPT
-A INPUT -d 224.0.0.0/8 -i ens192 -p vrrp -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -d 224.0.0.0/8 -i ens160 -p vrrp -j ACCEPT
-A INPUT -d 224.0.0.0/8 -i ens192 -p vrrp -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A INPUT -d 224.0.0.0/24 -p vrrp -j ACCEPT
-A INPUT -s 172.16.1.1/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 172.16.1.2/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 172.16.1.3/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 172.16.1.3/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A FORWARD -s 172.16.1.1/32 -p tcp -m tcp --dport 27017 -j ACCEPT
-A FORWARD -s 172.16.1.1/32 -p tcp -m tcp --dport 27017 -j ACCEPT
-A FORWARD -s 172.16.1.1/32 -p tcp -m tcp --dport 27017 -j ACCEPT
-A FORWARD -s 172.16.1.2/32 -p tcp -m tcp --dport 27017 -j ACCEPT
-A FORWARD -s 172.16.1.3/32 -p tcp -m tcp --dport 27017 -j ACCEPT
-A FORWARD -s 172.16.1.3/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A FORWARD -p tcp -m state --state NEW -m tcp --dport 5432 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i ens160 -o ens192 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens160 -o ens192 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens160 -j ACCEPT
-A FORWARD -i ens192 -o ens192 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens192 -o ens192 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -d 224.0.0.0/8 -o ens160 -p vrrp -j ACCEPT
-A OUTPUT -d 224.0.0.0/8 -o ens192 -p vrrp -j ACCEPT
-A OUTPUT -d 224.0.0.0/8 -o ens160 -p vrrp -j ACCEPT
-A OUTPUT -d 224.0.0.0/8 -o ens192 -p vrrp -j ACCEPT
-A OUTPUT -d 224.0.0.0/24 -p vrrp -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Fri Sep 13 13:58:04 2019
